--- a/main.css
+++ b/main.css
@@ -159,13 +159,17 @@ body{
 
 .fa-star-o{
 	text-shadow: -50px 0 0 black, 50px 0 0 black;
-    position: absolute;
-    top: 170px;
-    left: 600px;
     font-size: 50px;
 }
 
 .str{
 	top: 100%;
 	text-shadow: none;
+}
+
+.margins{
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	width: 50px;
 }
