--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body{
 	height: 100px;
 	width: 100%;
 	z-index: 100;
-	background-color: unset;
+	background-color: #34495e;
 }
 
 .nav-header{
@@ -38,15 +38,15 @@ body{
 	background-image: url("img/main.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	width: 100%;
-	height: 850px;
 }
 
 .conteiner{
 	max-width: 1250px;
 	margin-left: auto;
 	margin-right: auto;
-	position: relative;
+	padding-bottom: 30px;
 }
 
 .welcoming-header{
@@ -59,7 +59,7 @@ body{
 }
 
 .fh{
-	padding-top: 430px; 
+	padding-top: 480px; 
 }
 
 #arrow{
@@ -73,7 +73,7 @@ body{
 	text-shadow: 0 -15px 0 white, 0 -30px 0 white;
 	overflow: hidden;
 	transition: 0.3s ease;
-	margin: 60px auto 0 auto;
+	margin: 20px auto 0 auto;
 }
 
 #arrow:hover{
@@ -102,13 +102,21 @@ body{
 	position: relative;
 	font-family: 'Courgette', cursive;
 	font-size: 50px;
-	width: 730px;
+	max-width: 730px;
+	text-align: center;
     color: black;
-    /*text-shadow: 2px 2px 3px black
-    , -2px -2px 3px black
-    , 2px -2px 3px black
-    , -2px 2px 3px black;*/
 
+}
+
+.conteiner > h1::after,.after-line::after{
+	content: "";
+    width: 400px;
+    background-color: black;
+    height: 2px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
 }
 
 .border-top{
@@ -118,14 +126,17 @@ body{
 
 .flex-conteiner{
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .item{
 	text-align: center;
 	font-size: 21px;
 	margin: 25px;
-	margin-top: 200px;
+	margin-top: 130px;
 	margin-bottom: 100px;
+	max-width: 336px;
 	padding: 15px;
 	background-color: white;
 	-webkit-box-shadow: 0px 0px 50px -10px rgba(0,0,0,0.75);
@@ -157,19 +168,14 @@ body{
 	margin-top: 15px;
 }
 
-.fa-star-o{
-	text-shadow: -50px 0 0 black, 50px 0 0 black;
-    font-size: 50px;
+.art{
+	
 }
 
-.str{
-	top: 100%;
-	text-shadow: none;
+.first-img{
+	background-image: ;
 }
 
-.margins{
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 50px;
-	width: 50px;
+.second-img{
+	background-image: ;
 }
