--- a/main.css
+++ b/main.css
@@ -5,14 +5,19 @@ body{
 	background-image: url("img/bg.png");
 }
 
-.nav{
+#nav{
 	display: flex;
 	position: fixed;
 	align-items: center;
 	height: 100px;
 	width: 100%;
 	z-index: 100;
-	background-color: #34495e;
+	background-color: unset;
+	transition-duration: 0.5s;
+}
+
+.navScroll{
+	background-color: #34495e !important;
 }
 
 .nav-header{
@@ -32,6 +37,50 @@ body{
 	background-size: contain;
 	background-repeat: no-repeat;
 	margin-top: 50px;
+}
+
+nav{
+	margin-left: auto;
+	height: 100%;
+	color: white;
+}
+
+nav > ol{
+	display: flex;
+	align-items: center;
+	list-style: none;
+	margin: 0;
+	padding-right: 35px;
+	height: 100%;
+}
+
+nav>ol>li{
+	font-size: 35px;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	border-top: 5px solid rgba(0,0,0,0);
+	height: 95%;
+	transition-duration: 0.5s;
+}
+nav>ol>li:hover{
+	border-top: 5px solid white;
+}
+
+nav>ol>li>a{
+	padding: 10px 15px 15px 15px;
+	text-decoration: none;
+	color: white;
+	transition-duration: 0.5s;
+
+}
+
+nav>ol>li>a>p{
+	text-shadow: 0px 0px 40px black;
+}
+
+.noShadow{
+	text-shadow: none;
 }
 
 .main-img{
@@ -124,7 +173,7 @@ body{
 }
 
 .border-top{
-	border-top: 100px solid transparent;
+	border-top: 99px solid transparent;
 }
 
 
@@ -205,15 +254,15 @@ body{
 }
 
 .weather-img{
-	margin-top: 100px;
-	margin-bottom: 100px;
 	background-image: url("img/weather.jpg");
+	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 .osrodek-img{
 	background-image: url("img/osrodek.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
 	width: 100%;
 	padding-top: 1px;
 	padding-bottom: 1px;
@@ -266,6 +315,12 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 100px;
+}
+
+
+.iframe{
+	width: 800px;
+	height: 600px;
 }
 
 footer{
