--- a/main.css
+++ b/main.css
@@ -5,6 +5,10 @@ body{
 	background-image: url("img/bg.png");
 }
 
+h1,h2,h3{
+	font-family: 'Courgette', cursive;
+}
+
 #nav{
 	display: flex;
 	position: fixed;
@@ -55,7 +59,7 @@ nav > ol{
 }
 
 nav>ol>li{
-	font-size: 35px;
+	font-size: 30px;
 	font-weight: 700;
 	display: flex;
 	align-items: center;
