--- a/main.css
+++ b/main.css
@@ -9,6 +9,12 @@ h1,h2,h3{
 	font-family: 'Courgette', cursive;
 }
 
+.absolute{
+	position: absolute;
+    bottom: 0;
+    margin-bottom: 15vh;
+}
+
 
 #nav{
 	display: flex;
@@ -89,11 +95,20 @@ nav>ol>li>a>p{
 	text-shadow: none;
 }
 
+img.centered {
+     position:fixed;
+     left: 50%;
+     top:  50%;
+     margin-left: -32px;
+     margin-top:  -32px;
+ }
+
 .main-img{
 	background-image: url("img/main.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	width: 100%;
 	height: 100vh;
 }
 
@@ -114,45 +129,6 @@ nav>ol>li>a>p{
 	color: white;
 	text-shadow: 0px 0px 50px black;
 	line-height: 120%;
-}
-
-.fh{
-	padding-top: 50vh; 
-}
-
-#arrow{
-	width: 70px;
-	height: 70px;
-	border: 5px solid white;
-	border-radius: 50%;
-	font-size: 5rem;
-	text-align: center;
-	color: white;
-	text-shadow: 0 -15px 0 white, 0 -30px 0 white;
-	overflow: hidden;
-	transition: 0.3s ease;
-	margin: 40px auto 0 auto;
-}
-
-#arrow:hover{
-	transform: scale(1.1);
-	font-size: 6rem;
-}
-
-.fa-angle-down{
-	animation: arrow 1.6s infinite linear;
-}
-
-@keyframes arrow {
-	0%{
-		transform: translateY(-80px);
-	}
-	50%{
-		transform: translateY(0px);
-	}
-	100%{
-		transform: translateY(80px);
-	}
 }
 
 .conteiner > h1{
@@ -288,6 +264,7 @@ nav>ol>li>a>p{
 	text-align-last: center;
 	padding: 20px;
 	margin: 0;
+	font-size: 1.4rem;
 }
 
 .osrodek-text h1{
@@ -346,7 +323,7 @@ footer{
 
 @media only screen and (max-width: 1200px){
 	.welcoming-header{
-		font-size: 85px;
+		font-size: 95px;
 	}
 	.nav-header{
 		font-size: 40px;
@@ -360,6 +337,9 @@ footer{
 @media only screen and (max-width: 1050px){
 	.first-img{
 		margin-bottom: 20px;
+	}
+	.absolute{
+
 	}
 }
 
@@ -376,24 +356,24 @@ footer{
 		margin-left: auto;
 		margin-right: auto;
 	}
+	#first-img{
+		display: flex;
+		justify-content: center;
+	}
 }
 
 @media only screen and (max-width: 850px){
 	.welcoming-header{
 		font-size: 75px;
 	}
-	.fh {
-    padding-top: 58vh;
-	}
+
 	#map-responsive{
 		height: 200px;
 	}
 }
 
 @media only screen and (max-width: 650px){
-	.fh{
-		padding-top: 50vh;
-	}
+
 	.osrodek-text{
 		margin: 40px;
 	}
@@ -416,6 +396,9 @@ footer{
 	#map-responsive{
 		height: 400px;
 	}
+	.osrodek-text p{
+		font-size: 1.1rem;
+	}
 }
 
 @media only screen and (max-width: 450px){
@@ -432,9 +415,7 @@ footer{
 	.welcoming-header{
 		font-size: 50px;
 	}
-	.fh{
-		padding-top: 50vh;
-	}
+
 	.art {
     width: 350px;
     height: 280px;
@@ -442,13 +423,8 @@ footer{
 	.osrodek-text p{
 		font-size: 2vh
 	}
-	.item{
-
-	}
 }
 
 @media only screen and (min-height: 800px) and (max-height: 825px){
-	.fh{
-		padding-top: 56vh;
-	}
+
 }
