--- a/main.css
+++ b/main.css
@@ -5,6 +5,14 @@ body{
 	background-image: url("img/bg.png");
 }
 
+.hide{
+	opacity:0 !important;
+}
+
+.show {
+	opacity: 1 !important;
+}
+
 h1,h2,h3{
 	font-family: 'Courgette', cursive;
 }
@@ -103,14 +111,19 @@ img.centered {
      margin-top:  -32px;
  }
 
-.main-img{
+.parallax-window {
+    background: transparent;
+    min-height: 100vh;
+}
+
+/*.main-img{
 	background-image: url("img/main.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
-}
+}*/
 
 .conteiner{
 	max-width: 1250px;
@@ -235,27 +248,27 @@ img.centered {
 	font-size: 40px;
 }
 
-.weather-img{
+/*.weather-img{
 	background-image: url("img/weather.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: calc(100vh - 97px)
-}
+}*/
 
-.osrodek-img{
+/*.osrodek-img{
 	background-image: url("img/osrodek.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 	width: 100%;;
 	height: calc(100vh - 97px);
-}
+}*/
 
 .osrodek-text{
 	max-width: 500px;
 	height: 75vh;
     background-color: white;
     margin: 5vh 100px 100px auto;
-    opacity: 0.7;
+    opacity: 0.9;
     text-align: center;
 }
 
@@ -298,6 +311,7 @@ img.centered {
     position:relative;
     height:0;
     margin: 10px;
+    margin-bottom: 100px;
 }
 
 #map-responsive iframe{
