--- a/main.css
+++ b/main.css
@@ -381,6 +381,9 @@ footer{
 	#map-responsive{
 		height: 200px;
 	}
+	.parallax-window{
+		background: fixed;
+	}
 }
 
 @media only screen and (max-width: 650px){
