--- a/main.css
+++ b/main.css
@@ -111,19 +111,14 @@ img.centered {
      margin-top:  -32px;
  }
 
-.parallax-window {
-    background: transparent;
-    min-height: 100vh;
-}
-
-/*.main-img{
+.main-img{
 	background-image: url("img/main.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
-}*/
+}
 
 .conteiner{
 	max-width: 1250px;
@@ -248,20 +243,22 @@ img.centered {
 	font-size: 40px;
 }
 
-/*.weather-img{
+.weather-img{
 	background-image: url("img/weather.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: calc(100vh - 97px)
-}*/
+	height: calc(100vh - 97px);
+	background-attachment: fixed;
+}
 
-/*.osrodek-img{
+.osrodek-img{
 	background-image: url("img/osrodek.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 	width: 100%;;
 	height: calc(100vh - 97px);
-}*/
+	background-attachment: fixed;
+}
 
 .osrodek-text{
 	max-width: 500px;
