--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ nav>ol>li:hover{
 }
 
 nav>ol>li>a{
-	padding: 10px 15px 15px 15px;
+	padding: 0px 15px 0px 15px;
 	text-decoration: none;
 	color: white;
 	transition-duration: 0.5s;
@@ -262,11 +262,11 @@ img.centered {
 
 .osrodek-text{
 	max-width: 500px;
-	height: 75vh;
     background-color: white;
     margin: 5vh 100px 100px auto;
     opacity: 0.9;
     text-align: center;
+    padding-bottom: 40px;
 }
 
 .osrodek-text p{
