--- a/main.css
+++ b/main.css
@@ -247,7 +247,7 @@ img.centered {
 	background-image: url("img/weather.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: calc(100vh - 97px);
+	height: calc(100vh - 95px);
 	background-attachment: fixed;
 }
 
@@ -255,8 +255,8 @@ img.centered {
 	background-image: url("img/osrodek.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-	width: 100%;;
-	height: calc(100vh - 97px);
+	width: 100%;
+	height: 100vh;
 	background-attachment: fixed;
 }
 
@@ -264,7 +264,6 @@ img.centered {
 	max-width: 500px;
     background-color: white;
     margin: 5vh 100px 100px auto;
-    opacity: 0.9;
     text-align: center;
     padding-bottom: 40px;
 }
@@ -272,15 +271,21 @@ img.centered {
 .osrodek-text p{
 	text-align: justify;
 	text-align-last: center;
-	padding: 20px;
+	padding: 30px;
 	margin: 0;
-	font-size: 1.4rem;
+	font-size: 1.3rem;
 }
 
 .osrodek-text h1{
 	padding-top: 50px;
 	font-size: 40px;
 	margin: 0;
+}
+
+#padding-top{
+	padding-top: 50px;
+	padding-bottom: 50px;
+	opacity: 0.8;
 }
 
 #padding-zero{
@@ -329,6 +334,9 @@ footer{
 	}
 	#nav ol>li{
 		font-size: 25px;
+	}
+	.osrodek-img{
+		height: auto;
 	}
 }
 
